# rofd

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  a.rs  cov.ps1  out.rs  out1.rs  tar.sh  test.ofd
base/: Cargo.toml
base/src/: base.rs  common.rs
base/src/file/: annotation.rs  attachment.rs  extension.rs  mod.rs  page.rs  signature.rs  version.rs
help-macro/: Cargo.toml
help-macro/src/: lib.rs
ofd_base/: Cargo.toml
ofd_base/src/: base.rs  lib.rs
ofd_base/src/file/: annotation.rs  attachment.rs  custom_tag.rs  document.rs  ofd.rs  page.rs  res.rs  signature.rs  version.rs
ofd_base_rw/: Cargo.toml
ofd_cli/: Cargo.toml
ofd_cli/src/: error.rs  main.rs  ofd_utils.rs  util.rs
ofd_conv/: Cargo.toml
ofd_conv/src/: error.rs  img.rs  lib.rs
ofd_conv/src/img/: render.rs
ofd_conv/src/img/render/: font.rs  path.rs  text.rs
ofd_misc/: Cargo.toml
ofd_misc/src/: lib.rs  to_dom.rs
ofd_misc/src/dom/: doc.rs  mod.rs  ofd.rs  page.rs  res.rs
ofd_rw/: Cargo.toml
ofd_rw/src/: container.rs  error.rs  lib.rs
ofd_rw/tests/: cont_test.rs
ofd_sign/: Cargo.toml
ofd_sign/src/: der.rs  error.rs  gm.rs  lib.rs  v1.rs  v4.rs
ofd_sign/src/ext/: mod.rs
ofd_test/: Cargo.toml
ofd_test/resources/: test.p256.key  test.p256.pub  test.sm2_p8.key  test.sm2_p8.pub
ofd_test/tests/: color_test.rs  custom_serde.rs  help_macro_test.rs  minidom_test.rs  p256_test.rs  skia_test.rs  sm2_test.rs  xdom_de_test.rs
sample/Doc_0/: Document.xml  DocumentRes.xml  PublicRes.xml
sample/Doc_0/Attachs/: Attachments.xml  original_invoice.xml
sample/Doc_0/Res/: image_78.jb2
sample/Doc_0/Tags/: CustomTag.xml
sample2/: OFD.xml
sample2/Doc_0/: Document.xml  PublicRes.xml
sample2/Doc_0/Attachs/: Attachments.xml  original_invoice.xml
sample2/Doc_0/Pages/Page_0/: Content.xml
sample2/Doc_0/Pages/Page_3/: Content.xml
sample2/Doc_0/Signs/Sign_0/: Signature.xml
sample2/Doc_0/Tpls/Tpl_1/: Content.xml
sample2/Doc_0/Tpls/Tpl_2/: Content.xml
sample2/Doc_0/Tpls/Tpl_3/: Content.xml
samples/: Version.xml  stamp.ofd
samples/000/: OFD.xml
samples/000/Doc_0/: Document.xml  DocumentRes.xml  PublicRes.xml
samples/000/Doc_0/Annots/Page_0/: Annotation.xml
samples/000/Doc_0/Attachs/: original_invoice.xml
samples/000/Doc_0/Pages/Page_0/: Content.xml
samples/000/Doc_0/Signs/Sign_0/: Signature.xml
samples/000/Doc_0/Tpls/Tpl_0/: Content.xml
samples/001/: OFD.xml
samples/001/Doc_0/: Document.xml  DocumentRes.xml  PublicRes.xml
samples/001/Doc_0/Annots/: Annotations.xml
samples/001/Doc_0/Annots/Page_0/: Annotation.xml
samples/001/Doc_0/Attachs/: Attachments.xml  original_invoice.xml
samples/001/Doc_0/Pages/Page_0/: Content.xml
samples/001/Doc_0/Pages/Page_1/: Content.xml
samples/001/Doc_0/Pages/Page_2/: Content.xml
samples/001/Doc_0/Pages/Page_3/: Content.xml
samples/001/Doc_0/Pages/Page_4/: Content.xml
samples/001/Doc_0/Signs/: Signatures.xml
samples/001/Doc_0/Signs/Sign_0/: Signature.xml
samples/001/Doc_0/Tags/: CustomTags.xml  Tag_Invoice.xml
samples/001/Doc_0/Tpls/Tpl_0/: Content.xml
samples/001/Doc_0/Tpls/Tpl_1/: Content.xml
samples/001/Doc_0/Tpls/Tpl_2/: Content.xml
samples/001/Doc_0/Tpls/Tpl_3/: Content.xml
samples/001/Doc_0/Tpls/Tpl_4/: Content.xml
samples/002/: OFD.xml
samples/002/Doc_0/: Annotations.xml  Document.xml  DocumentRes.xml  PublicRes.xml
samples/002/Doc_0/Pages/Page_0/: Annotation.xml  Content.xml
samples/002/Doc_0/Pages/Page_1/: Annotation.xml  Content.xml
samples/002/Doc_0/Pages/Page_2/: Annotation.xml  Content.xml
samples/ano/: OFD.xml
samples/ano/Doc_0/: Annotations.xml  Document.xml  PublicRes.xml
samples/ano/Doc_0/Pages/Page_0/: Annotation.xml  Content.xml
samples/ano/Doc_0/Pages/Page_2/: Annotation.xml  Content.xml
samples/ano/Doc_0/Res/: font_133_133.cff
samples/sample/: OFD.xml
samples/sample/Doc_0/Attachs/: original_invoice.xml
samples/sample/Doc_0/Pages/Page_0/: Content.xml
samples/sample2/Doc_0/: DocumentRes.xml
samples/sample2/Doc_0/Annots/: Annotations.xml
samples/sample2/Doc_0/Annots/Page_0/: Annotation.xml
samples/sample2/Doc_0/Pages/Page_1/: Content.xml
samples/sample2/Doc_0/Pages/Page_2/: Content.xml
samples/sample2/Doc_0/Pages/Page_4/: Content.xml
samples/sample2/Doc_0/Signs/: Signatures.xml
samples/sample2/Doc_0/Tags/: CustomTags.xml  Tag_Invoice.xml
samples/sample2/Doc_0/Tpls/Tpl_0/: Content.xml
samples/sample2/Doc_0/Tpls/Tpl_4/: Content.xml
src/: container.rs  custom_de.rs  error.rs  lib.rs  main.rs  ofd_utils.rs  render.rs
src/dom/: doc.rs  mod.rs  ofd.rs  page.rs  res.rs
src/element/: base.rs  common.rs  mod.rs
src/element/file/: annotation.rs  attachment.rs  custom_tag.rs  document.rs  extension.rs  mod.rs  ofd.rs  ofd_parser.rs  page.rs  res.rs  signature.rs  version.rs
src/render/: font.rs
tests/: color_test.rs  custom_serde.rs  help_macro_test.rs  minidom_test.rs  mut_test.rs  quick_xml_reader_test.rs  skia_test.rs  test.rs  xdom_de_test.rs  xml_rs_test.rs
xdom/: Cargo.toml
xdom/src/: de.rs  lib.rs  ser.rs  to_dom.rs
xdom/src/de/: key.rs  value.rs
xdom/src/ser/: attr.rs  field.rs
xsd/: Annotation.xsd  Annotations.xsd  Attachments.xsd  CustomTags.xsd  Definition.xsd  Definitions.xsd  Document.xsd  Extensions.xsd  OFD.xsd  Page.xsd  Res.xsd  Signature.xsd  Signatures.xsd  Version.xsd  main.xsd
