[workspace]
resolver = "2"
members = [
    "ofd_rw",
    "help-macro",
    "xdom",
    "ofd_cli",
    "ofd_base",
    "ofd_conv",
    "ofd_misc",
]


[profile.cov]
inherits = "test"

[workspace.package]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
chrono = "0.4.38"
clap = "4.5.20"
cli-table = "0.4.9"
derive_builder = "0.20.2"
env_logger = "0.11.5"
eyre = "0.6.12"
log = "0.4.22"
pdf = "0.9.0"
quick-xml = "0.37.0"
relative-path = "1.9.3"
serde = "1.0.214"
serde_with = "3.11.0"
skia-safe = "0.78.2"
thiserror = "1.0.67"
walkdir = "2.5.0"
zip = "2.2.0"
minidom = "0.16.0"
strum = "0.26.3"
proc-macro2 = "1.0.89"
quote = "1.0.37"
syn = "2.0.87"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
test-log = "0.2.16"
