[workspace]
resolver = "2"
members = [
    "ofd_rw",
    "help-macro",
    "xdom",
    "ofd_cli",
    "ofd_base",
    "ofd_conv",
    "ofd_misc",
    "ofd_test",
    "ofd_sign",
]


[profile.cov]
inherits = "test"

[workspace.package]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
chrono = "0.4.39"
clap = "4.5.23"
cli-table = "0.4.9"
eyre = "0.6.12"
pdf = "0.9.0"
relative-path = "1.9.3"
serde = "1.0.216"
serde_with = "3.11.0"
skia-safe = "0.80.1"
thiserror = "2.0.6"
walkdir = "2.5.0"
zip = "2.2.1"
minidom = "0.16.0"
strum = "0.26.3"
proc-macro2 = "1.0.92"
quote = "1.0.37"
syn = "2.0.90"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
interpolator = "0.5.0"

# workspace
xdom = { path = "xdom" }
ofd_base = { path = "ofd_base" }
ofd_rw = { path = "ofd_rw" }
ofd_conv = { path = "ofd_conv" }


# only dev use
quick-xml = "0.37.1"
