[package]
name = "ofd_cli"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
clap = { workspace = true, features = ["derive", "string"] }
cli-table = { workspace = true }
eyre = { workspace = true }
thiserror = { workspace = true }
ofd_base = { path = "../ofd_base" }
ofd_rw = { path = "../ofd_rw" }
ofd_conv = { path = "../ofd_conv" }
env_logger = { workspace = true }
