[package]
name = "ofd_cli"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
clap = { workspace = true, features = ["derive", "string"] }
cli-table = { workspace = true }
eyre = { workspace = true }
thiserror = { workspace = true }
ofd_base = { workspace = true }
ofd_rw = { workspace = true }
ofd_conv = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
interpolator = { workspace = true, features = ["number"] }
