[package]
name = "ofd_conv"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"


[dependencies]
ofd_base = { path = "../ofd_base" }
ofd_rw = { path = "../ofd_rw" }
eyre = { workspace = true }
skia-safe = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
walkdir = { workspace = true }

[dev-dependencies]
tracing-subscriber = { workspace = true }
