[package]
name = "ofd_rw"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
ofd_base = { workspace = true }
thiserror = { workspace = true }
minidom = { workspace = true }
relative-path = { workspace = true }
zip = { workspace = true }
serde = { workspace = true }
xdom = { workspace = true }
tracing = { workspace = true, features = ['release_max_level_info'] }
#cached = "0.53.1"

[dev-dependencies]
eyre = { workspace = true }
