[package]
name = "ofd_sign"
version = "0.1.0"
edition = "2021"
license.workspace = true

[dependencies]
ofd_rw = { workspace = true }

der = { version = "0.7.9", features = ["alloc", "derive", "oid", "std"] }
thiserror = { workspace = true }
x509-cert = { workspace = true, features = ["builder"] }
ecdsa = { workspace = true }
#pkcs8 = "0.10.2"
#p256 = { version = "0.13.2", features = ["ecdsa"] }
#der = "0.7.9"
sha2 = { version = "0.10.8", features = ["oid"] }
sm2 = { workspace = true }
pkcs8 = { workspace = true, features = ["alloc", "encryption", "pem", "std"] }
signature = { version = "2.2.0", features = ["alloc", "std"] }
chrono.workspace = true

eyre = { workspace = true }
[dev-dependencies]
