[package]
name = "ofd_test"
version = "0.1.0"
edition = "2021"
license.workspace = true

[dev-dependencies]
xdom = { path = "../xdom" }
ofd_base = { path = "../ofd_base" }
ofd_rw = { path = "../ofd_rw" }
ofd_conv = { path = "../ofd_conv" }
ofd_misc = { path = "../ofd_misc" }
serde = { workspace = true }
help-macro = { path = "../help-macro" }
skia-safe = { workspace = true }
eyre = { workspace = true }
minidom = { workspace = true }
chrono = { workspace = true }
tracing-subscriber = { workspace = true }

quick-xml = { version = "0.37.0", features = ["serde"] }
#pdf = { workspace = true }
