[package]
name = "ofd_test"
version = "0.1.0"
edition = "2021"
license.workspace = true

[dev-dependencies]
xdom = { path = "../xdom" }
ofd_base = { path = "../ofd_base" }
ofd_rw = { path = "../ofd_rw" }
ofd_conv = { path = "../ofd_conv" }
ofd_misc = { path = "../ofd_misc" }
serde = { workspace = true }
help-macro = { path = "../help-macro" }
skia-safe = { workspace = true }
eyre = { workspace = true }
minidom = { workspace = true }
chrono = { workspace = true }
tracing-subscriber = { workspace = true }

quick-xml = { workspace = true, features = ["serde"] }

[dependencies]
x509-cert = { version = "0.2.5", features = ["builder"] }
ecdsa = { version = "0.16.9", features = ["alloc", "pem", "pkcs8", "signing", "spki", "std","digest"] }
pkcs8 = "0.10.2"
p256 = { version = "0.13.2", features = ["ecdsa"] }
der = "0.7.9"
sha2 = { version = "0.10.8", features = ["oid"] }
sm2 = "0.13.3"
sm3 = "0.4.2"
hex = "0.4.3"
#pdf = { workspace = true }

[features]
sm2 = []
