[package]
name = "xdom"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
chrono = { workspace = true }
minidom = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true,features = ["release_max_level_info"] }


[dev-dependencies]
eyre = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tracing-subscriber = { workspace = true }
